# evergro-backgrounds

./: .gitignore  LICENSE.md  README.md  evergro-backgrounds.xml  install.sh
Evergro/: LICENSE.md
backgrounds/: evergro-backgrounds.xml.in
evergro-backgrounds_1.0-0.1~ubuntu16.04.1/: Makefile.am  configure.ac
evergro-backgrounds_1.0-0.1~ubuntu16.04.1/backgrounds/: Makefile.am
evergro-backgrounds_1.0-0.1~ubuntu16.04.1/debian/: changelog  control  copyright  files  rules
evergro-backgrounds_1.0-0.1~ubuntu17.10.1/: AUTHORS
evergro-backgrounds_1.0-0.1~ubuntu17.10.1/backgrounds/: meson.build
evergro-backgrounds_1.0-0.1~ubuntu17.10.1/debian/: changelog  control  files  rules
evergro-backgrounds_1.0-0.1~ubuntu18.04.1/: meson.build
evergro-backgrounds_1.0-0.1~ubuntu18.04.1/debian/: changelog  files
